# reklama-polityczna-w-social-mediach

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
cloud_functions/: deploy.sh
cloud_functions/meta_daily_sync/: README.md  main.py  requirements.txt
collectors/: __init__.py  base.py
collectors/google/: .gitkeep  __init__.py  collector.py
collectors/meta/: README.md  __init__.py  collector.py  config.yaml  search_terms.yaml
collectors/tiktok/: .gitkeep  __init__.py  collector.py
config/: base_config.yaml
scripts/: debug_meta_auth.py  run_meta_collector.py  test_credentials.py  upload_to_bigquery.py
shared/: __init__.py  checkpoint_manager.py  exceptions.py  logger.py  output_writer.py  rate_limiter.py
tests/: __init__.py  test_checkpoint.py  test_meta_collector.py  test_output_writer.py  test_rate_limiter.py
